# BACKEND/17-PersonelApi_Logs_Documents/src/controllers/auth.js
@@ -71,6 +71,19 @@ module.exports = {
 
 module.exports = {
   login: async (req, res) => {
+    /*
+            #swagger.tags = ['Authentication']
+            #swagger.summary = 'Login'
+            #swagger.description = 'Login with username and password'
+            #swagger.parameters['body'] = {
+                in: 'body',
+                required: true,
+                schema: {
+                    username: '*String',
+                    password: '*String',
+                }
+            }
+        */
     const { username, password } = req.body;
 
     if (username && password) {
@@ -109,6 +122,11 @@ module.exports = {
   },
 
   logout: async (req, res) => {
+    /*
+            #swagger.tags = ['Authentication']
+            #swagger.summary = 'Logout'
+            #swagger.description = 'Delete token.'
+        */
     const data = req.user
       ? await Token.deleteOne({ userId: req.user._id })
       : null;
