# BACKEND/17-PersonelApi_Logs_Documents/src/routes/department.js
@@ -1,26 +1,37 @@
-"use strict"
+"use strict";
 /* -------------------------------------------------------
     EXPRESS - Personnel API
 ------------------------------------------------------- */
-const router = require('express').Router()
+const router = require("express").Router();
 /* ------------------------------------------------------- */
 
-const { list, create, read, update, delete: deleteDepartment, personnels } = require('../controllers/department')
-const { isLogin, isAdmin, isAdminOrLead} = require('../middlewares/permissions')
+const {
+  list,
+  create,
+  read,
+  update,
+  deleteDepartment,
+  personnels,
+} = require("../controllers/department");
+
+const {
+  isLogin,
+  isAdmin,
+  isAdminOrLead,
+} = require("../middlewares/permissions");
 
 // URL : /departments
 
-router.route('/')
-    .get(isLogin, list)
-    .post(isAdmin, create)
+router.route("/").get(isLogin, list).post(isAdmin, create);
 
-router.route('/:id')
-    .get(isLogin, read)
-    .put(isAdmin, update)
-    .patch(isAdmin, update)
-    .delete(isAdmin, deleteDepartment)
+router
+  .route("/:id")
+  .get(isLogin, read)
+  .put(isAdmin, update)
+  .patch(isAdmin, update)
+  .delete(isAdmin, deleteDepartment);
 
-router.get('/:id/personnels',isAdminOrLead, personnels)
+router.get("/:id/personnels", isAdminOrLead, personnels);
 
 /* ------------------------------------------------------- */
-module.exports = router
+module.exports = router;
