# BACKEND/17-PersonelApi_Logs_Documents/src/routes/token.js
@@ -1,26 +1,26 @@
-"use strict"
+"use strict";
 /* -------------------------------------------------------
     EXPRESS - Personnel API
 ------------------------------------------------------- */
-const router = require('express').Router()
+const router = require("express").Router();
 /* ------------------------------------------------------- */
 
-const { list, create, read, update, delete: deleteToken } = require('../controllers/token')
-const { isAdmin } = require('../middlewares/permissions')
+const {
+  list,
+  create,
+  read,
+  update,
+  deleteToken,
+} = require("../controllers/token");
+const { isAdmin } = require("../middlewares/permissions");
 
 // URL : /tokens
 
-router.use(isAdmin) // this is router middleware, it runs before every method
+router.use(isAdmin); // this is router middleware, it runs before every method
 
-router.route('/')
-    .get(list)
-    .post(create)
+router.route("/").get(list).post(create);
 
-router.route('/:id')
-    .get(read)
-    .put(update)
-    .patch(update)
-    .delete(deleteToken)
+router.route("/:id").get(read).put(update).patch(update).delete(deleteToken);
 
 /* ------------------------------------------------------- */
-module.exports = router
+module.exports = router;
